# Voronini-Fun-FastAPI-

./: .env  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml
app/: .env  config.py  logger.py  main.py
app/alembic/: env.py
app/api/: posts.py  user.py
app/api/feed/: api.py
app/api/posts/: api.py
app/api/user/: api.py
app/common/: config.py  sqlalchemy_ext.py
app/common/dependencies/: authorization_dep.py
app/database/core/: database.py  models.py
app/database/posts/: schemas.py
app/posts/dependencies/: posts_dep.py
app/posts/models/: posts.py
app/posts/routes/: posts_rest.py
app/redis_client/: redis_controller.py
app/redis_client/dependencies/: redis_dep.py
app/users/: aliases.py
app_comments/: api.py
auth/: crud.py  hash_password.py  tokens.py  utils.py
database/: errors.py
database/posts/: schemas.py
database/users/: schemas.py
db/: models.py  orm.py  schemas.py
docker-compose-files/: compose-test.yml  compose.yml
modules/feed/: api.py
modules/post/: crud.py  schemas.py
modules/tests/: test_user_cruds.py
modules/user/: api.py  crud.py  schemas.py
services/auth/: cookies.py
services/users/: users.py
static/css/: base-style.css  cabinet-style.css  feed-style.css  login-style.css  registration-style.css
static/js/: base-script.js  cabinet-script.js  feed-script.js  login-script.js  registration-script.js
templates/: base.html  cabinet.html  feed.html  index.html  login.html  post.html  registration.html
voronini-fun-docker-compose-files/: compose.yml
(+34 files in other folders)
