[project]
name = "voroninifun"
version = "0.1.0"
description = ""
authors = [
    {name = "Slava",email = "slavik3001@rambler.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "alembic (>=1.16.4,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "requests (>=2.32.4,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "pydantic-marshals (>=0.3.16,<0.4.0)",
    "redis (>=6.4.0,<7.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg-binary (>=3.2.9,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
